--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Stylus Demo</title>
+    <title>Stylus Docs</title>
     <link href="https://fonts.googleapis.com/css?family=Bitter|Lobster|Quicksand|Raleway|Tajawal|Varela+Round" rel="stylesheet">
   </head>
   <body>
